src/App.css
.container {
  min-height: 100vh;
  padding: 0 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.main {
  padding: 5rem 0;
}

.footer {
  width: 100%;
  height: 100px;
  border-top: 1px solid #eaeaea;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer img {
  margin-left: 0.5rem;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 3rem;
  margin-bottom: 2rem;
}

.title,
.description {
  text-align: center;
}

.description {
  line-height: 1.5;
  font-size: 1.5rem;
  position: relative;
  max-width: 341px;
  margin: 0 auto;
}

.input {
  min-height: 45px;
  border: 2px solid #e7e7e7;
  border-radius: 4px 0 0 4px;
  line-height: 30px;
  font-size: 24px;
  padding: 1px 20px 0px;
  width: calc(100% - 44px);
}

.clear-input {
  position: absolute;
  right: 20px;
  background-color: transparent;
  border: 0;
  font-family: monospace;
  padding: 0;
  cursor: pointer;
  top: 50%;
  transform: translateY(-50%);
}

/* Chrome, Safari, Edge, Opera */
.input::-webkit-outer-spin-button,
.input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.input::placeholder {
  font-size: 14px;
  position: relative;
  top: -3px;
}

.submit {
  background-color: #e3e3e3;
  border: 0;
  min-height: 49px;
  padding: 0 30px;
  border-radius: 0 4px 4px 0;
  cursor: pointer;
}

/* Firefox */
.input[type=number] {
  -moz-appearance: textfield;
}

.message {
  color: red;
  max-width: 300px;
  margin: 30px auto -20px;
  text-align: center;
}
.error {
  color: red;
}
.warning {
  color: #856404;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: grid;
  margin-top: 3rem;
  grid-template-columns: repeat(3, 380px);
  gap: 30px;
}

.card {
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border-radius: 10px;
  border: 1px solid #eaeaea;
  transition: all 0.15s ease;
}

.card:hover,
.card:focus,
.card:active {
  /* color: #0070f3;
  border-color: #0070f3; */
  box-shadow: 0px 11px 30px rgba(51, 83, 145, 0.07);
}

.card h3 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1rem;
  line-height: 2;
}

.card p span {
  font-family: 'Metropolis Medium';
}

.logo {
  height: 1em;
}

@media (max-width: 600px) {
  .grid {
    grid-template-columns: repeat(1, 1fr);
    width: 100%;
  }
  .input {
    min-width: 180px;
  }
}

